message ghost_file_entry {
	required uint32		uid		= 1;
	required uint32		gid		= 2;
	required uint32		mode		= 3;

	optional uint32		dev		= 4;
	optional uint64		ino		= 5;
}
